@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.520 2016/03/25 20:58:02 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.521 2016/04/01 16:19:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -4387,18 +4387,18 @@ process_image(void *plot, t_procimg_action action)
     /* with individual coords rather than via array, matrix, or image format.	*/
     /* This might better be done when the data is entered rather than here.	*/
     if (L == 0 || K == 0) {
-	if (points[0].y == points[1].y) {
-	    for (K = 0; points[K].y == points[0].y; K++)
+	if (points[0].x == points[1].x) {
+	    for (K = 0; points[K].x == points[0].x; K++)
 		    if (K >= p_count)
 			    break;
 	    L = p_count / K;
 	} else {
-	    for (L = 0; points[L].x == points[0].x; L++)
+	    for (L = 0; points[L].y == points[0].y; L++)
 		    if (L >= p_count)
 			    break;
 	    K = p_count / L;
 	}
-	FPRINTF((stderr, "No dimension information for %d pixels total. Try %d x %d",
+	FPRINTF((stderr, "No dimension information for %d pixels total. Try %d x %d\n",
 		p_count, L, K));
     }
 
